add endpoints to remove item from dictionaries, small refactofing